# geff

./: Cargo.toml  makefile
geff-core/: Cargo.toml
geff-core/src/: goal.rs  profile.rs  query.rs  request.rs
geff-core/src/profile/: goal_traversal.rs
geff-iced/: Cargo.toml
geff-iced/src/: main.rs
geff-tauri/: Cargo.toml  defs.ts  package.json  tsconfig.json
geff-tauri/src/: App.css  App.scss  App.tsx  Event.ts  RootGoals.tsx  Store.ts  main.tsx
geff-tauri/src-tauri/: Cargo.toml  tauri.conf.json
geff-tauri/src-tauri/src/: app.rs  command.rs  main.rs  parser.rs
geff-tauri/src/definitions/: geff.ts
geff-tui/: Cargo.toml
geff-tui/src/: main.rs  parser.rs
geff-util/: Cargo.toml
geff-util/src/: cursor.rs  lib.rs  persistent_state.rs
geff-util/src/persistent_state/: native.rs  wasm.rs
goals/: Cargo.toml
goals-iced/: Cargo.toml
goals-iced/src/: commandline_grammar.pest  main.rs
goals/src/: event.rs  goal.rs  lib.rs  perf.data  perf.data.old  profile.rs  query.rs  request.rs
lib/: Cargo.toml
lib/geff-core/src/: goal.rs  profile.rs
lib/geff-util/src/: lib.rs
