[package]
name = "geff-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
rmp-serde = "1.1.1"
serde = { version = "1.0.152", features = ["derive"] }
tui = { version = "0.19.0", features = ["serde"] }
geff-core = { path = "../geff-core" }
geff-util = { path = "../geff-util" }
chrono = "0.4.23"
tokio = { version = "1.23.0", features = ["full"] }
anyhow = "1.0.68"
nom = "7.1.1"
