[package]
name = "geff-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geff-core = { path = "../geff-core" }
thiserror = "1.0.38"
serde = { version = "1.0.151", features = ["derive"] }
rmp-serde = "1.1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.23.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
