[package]
name = "goals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.151", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
serde_with = { version = "2.1.0", features = ["chrono_0_4"] }
thiserror = "1.0.38"
